--- a/joint action and knowing others minds/interacting mindreaders.tex
+++ b/joint action and knowing others minds/interacting mindreaders.tex
@@ -38,9 +38,16 @@ Note that the question a theory of interpretation answers is a question about ju
 It is not about about \emph{how} anyone actually ascribes thoughts or identifies actions. 
 Nor is it (at least not immediately) a question about the mechanisms, processes or representations involved in mindreading.
 To stress this, Davidson sometimes formulates the issue by asking what someone \emph{could} know that would put them in a position to know another's thoughts and actions \citep[e.g.][p.\ 126]{Davidson:1973jx}.
-A theory of interpretation is just one part of an account of mindreading.
 
-It is perhaps fair to say that most researchers regard 
+So a theory of interpretation is just one part of a full account of mindreading.
+A full account would need to address questions 
+about how mindreaders actually ascribe mental states, 
+about what mental states are, 
+and 
+about the evolution and development of mindreading,
+among others.
+Although a theory of interpretation will constrain and be constrained by answers to these questions,
+none of these questions are directly addressed or answered by a theory of interpretation.
 
 The two most sustained and elaborate attempts to provide a theory of interpretation,
 Davidson's (\citeyear{Davidson:1984wh}) and Dennett's (\citeyear{Dennett:1987sf}),
@@ -63,11 +70,11 @@ To develop the idea that
 interaction broadens the evidential basis for interpretation
 we do not need to throw away the leading, most critically examined theories of interpretation due to Davidson and Dennett.
 An entirely fresh start is unnecessary.
-Of course we do not mean to assert, positively, that there are not devastating objections to these theories; perhaps there are.
-But considerations about the role of interaction in theories of interpretation do not give rise to any such objections.
-The best way to understand how interaction bears on epistemic and normative aspects of mindreading is to extend rather than to reject the leading theories.
+Of course we do not mean to assert, positively, that there are no good objections to these theories; perhaps there are.
+Our point is just that considerations about the role of interaction in theories of interpretation do not give rise to any such objections.
+A good way to understand how interaction bears on epistemic and normative aspects of mindreading is to extend rather than to reject the leading theories.
 
-Since we shall discuss the role of interaction in theories of interpretation as an extension of leading theories (without any commitment here to the correctness of these theories---any theory of interpretation will have to accommodate considerations about interaction), it will be useful to start with a brief outline of those theories.
+Since we shall discuss the role of interaction in theories of interpretation as an extension of leading theories (without any commitment here to the correctness of these theories; any theory of interpretation will have to accommodate considerations about interaction), it will be useful to start with a brief outline of those theories.
 
 
 
