--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -28,22 +28,67 @@
 \end{abstract}
 
 
+\section{Mindreading: the normative project}
+
+The question is what constitutes evidence.
+
+Mostly people have supposed that the evidence is available to pure observers --- being able to interact with the targets of mindreading confers no in principle advantage.
+
+In challenging this thesis we want to start with goal ascription, which is either a precursor to or a component of mindreading.
+Recent interest in non-propositional precursors to mindreading makes this appropriate.
+
+
 \section{Goal ascription}
 Purposive action is action directed to the realisation of one or more outcomes.
-Identifying which outcomes others' purposive actions are directed to enables one
-to predict and manipulate their actions, and 
-to emulate their achievements.
-It is also instrumental for mindreading:
+Goal ascription is the process of identifying which outcomes others' purposive actions are directed to.
+
+Goal ascription enables one
+to predict and manipulate others' actions, and 
+to learn from their failures and successes.
+%This applies even to goal ascribers with no further mindreading abilities: 
+% even those unable to identify beliefs, desires and other propositional attitudes have much to gain from identifying the outcomes to which other agents' actions are directed.
+For example, suppose that while you are searching for some peanuts 
+another agent attempts but fails to reach for a closed container.
+In some circumstances,
+if you know that the goal of the agent's action was to obtain the peanuts
+then you now have evidence as to where they might be.
+This is one illustration of how goal ascription could in principle enable us to learn from others' failures.
+
+Goal ascription is also instrumental for mindreading:
 knowing which outcomes an action is directed to may constrain hypotheses about what an agent intends 
 as well as
 potentially providing information concerning what the agent knows, believes or desires.
 For example,
-if we know that the goal of an agent's action is to retrieve the key to her house,
-and if we also know where her key is,
-we may be able to infer that she does not know where her key is,
-or that she falsely believes that her key is in her purse.
+if we know that the goal of an agent's action is to retrieve some peanuts,
+and if we also know where all the peanuts are,
+we may be able to infer that she does not know where the peanuts are,
+or that she falsely believes that some of the peanuts are over there.%
+\footnote{
+Of course this can also work the other way:
+belief- and goal-ascriptions are mutually constraining.
+}
 
-***Examples.
+Despite the close connection between goal ascription and mindreading,
+goal ascription does not necessarily involve representing representations.
+To see why not we first need to be careful about the term `goal'.
+***
+[do the detour here]
+
+The fact that goal ascription does not involve metarepresentation raises the possibility that goal ascription is possible independently of mindreading.
+Consider an agent who has no communicative skills and no metarepresentational abilities.
+Nothing prevents her from \emph{representing} goals, of course.
+But could she actually ascribe goals?
+Is there any evidence which could be available to her and which would support goal ascriptions?
+Some philosophers have argued\footnote{*Bennett} or implied\footnote{*Davidson} that there could not be.
+On their view, the goal ascription and mindreading are interdependent in this sense: 
+there is no evidence for hypotheses narrowly about goals, only evidence for more complex hypotheses concerning both goals and mental states (such as beliefs).
+So, on this view, those without metarepresentational abilities are not in a position to know the goals of other agents' actions.
+
+
+
+
+
+\section{OLD}
 
 These simple facts about goal ascription raise many questions.
 Some concern mechanism, how in fact one subject is able to discover facts about which outcomes another agent's actions are directed to.
@@ -54,7 +99,7 @@ What evidence could support hypotheses about the outcomes to which actions are d
 And how would the evidence support the hypotheses?%
 \footnote{
 These questions are versions of those Davidson constructs a theory of interpretation to answer.
-While what follows draws freely on Davidson's insights,
+While what follows draws  on Davidson's insights,
 our aims here are more modest than his.
 For we are concerned only with a  fraction of the problem of ascribing mental states and meanings;
 and, unlike Davidson, we are not concerned with larger claims about the nature of mind.
@@ -69,8 +114,15 @@ We will also stipulate that there is initially no common ground, shared culture 
 And we will stipulate that the goal ascriber is initially unable to understand any communicative actions.
 
 There are two sorts of motivation for these restriction on the evidential basis.
-One is simply that developmental and comparative research indicates that goal ascription does appear to take place  in such circumstances.
-This makes it important to understand the grounds on which such ascriptions may be based (this may not tell us very much about how goal ascriptions are actually made, but it will be necessary to understand reliable success of mechanisms for goal ascription).
+One is simply that developmental and comparative research indicates that goal ascription does appear to take place  in such circumstances.%
+\footnote{
+*refs
+}
+This makes it important to understand the evidence on which such ascriptions could be based.
+(Of course 
+identifying evidence that could support such ascriptions 
+would not all by itself enable us to explain how goal ascriptions are actually made, 
+but identifying evidence is necessary if we are ever to explain the reliable success of mechanisms for goal ascription.)
 Another source of motivation is the conjecture that goal ascription is a prerequisite for the more sophisticated mindreading activities which reveal mental states and meanings.
 The coherence of this conjecture depends on the possibility of knowing something about which outcomes an agent's actions are directed to independently of knowing what she believes or desires and independently of understanding her communicative actions.%
 \footnote{
@@ -84,7 +136,7 @@ But he also thought that interpretation had to happen all at once.)
 }
 
 So what evidence could support goal ascription by someone who knows nothing discriminating about her targets' mental states or communicative actions?
-The standard view, simplified, is this.%
+Ordinary third-person goal ascription, simplified and idealized, works like this.%
 \footnote{
 *ref? Dennett?
 }
@@ -93,18 +145,65 @@ the would-be goal ascriber first asks which outcomes this action could be a mean
 She then considers which of these outcomes are potentially beneficial for, or desirable to, the agent.
 Any such outcomes are identified as goals to which the action is directed.
 So the fact that an action is a means to realising some outcome which is potentially beneficial or desirable is evidence for the conclusion that this outcome is one to which the action is directed.
+Schematically, the proposal is that:
 %
 \begin{idescription}
-\item[(E$_1$)] Action $a$ is a means to realising outcome $G$.
-\item[(E$_2$)] The occurrence of outcome $G$ is potentially beneficial for, or desirable to, the agent of $a$.
+\item[(E$_1$)] Action $a$ is a means of realising outcome $G$.
 \end{idescription}
 %
-Are collectively evidence for concluding that:
+and:
+%
+\begin{idescription}
+\item[(E$_2$)] The occurrence of outcome $G$ is potentially beneficial for, or desirable to, the agent of $a$.
+(And there is no other outcome, $G'$, which action $a$ is a means of realising and which would be more beneficial for, or more desirable to, the agent of $a$.)
+\end{idescription}
+%
+jointly constitute evidence for the conclusion that:
 %
 \begin{idescription}
 \item[(C)] $G$ is a goal to which action $a$ is directed.
 \end{idescription}
+
+This proposal might be extended in various ways.
+For instance, Southgate, Johnson and Csibra offer a `principle of efficiency' according to which:
 %
+\begin{quote}
+`goal attribution requires that agents expend the least possible amount of energy within their motor constraints to achieve a certain end.'
+\citep[p.\ *]{Southgate:2008el}
+\end{quote}
+%
+If this is a correct principle of goal attribution, we could extend the proposal above to incorporate it:
+%
+\begin{idescription}
+\item[(E$_3$)] No alternative action, $a'$, is a means to realising outcome $G$ and would involve expending less energy than $a$.
+\end{idescription}
+%
+Now the proposal is that (E$_1$) to (E$_3$) are jointly evidence for (C).
+
+In at least some cases goal attribution is likely to be more complicated than this proposal allows.
+To illustrate, note that some agents may weigh the efficiency of alternative actions against their possible side effects and how reliable they would be as a means to realising an outcome.
+Where this is true, 
+identifying the evidential basis for goal ascription may require  a similar weighing of these factors in inferring backwards from actions to their goals.%
+\footnote{
+This is loosely related to what Csibra and Gergely call `the principle of rational action'.
+As they formulate the principle,
+`an action can be explained by a goal state if, and only if, it is seen as the most justifiable action towards that goal state that is available within the constraints of reality'
+(\citealp[p.\ *]{Csibra:1998cx}; cf.\ \citealp{Csibra:2003jv}).
+}
+Specifying exactly what should be weighed and how is beyond the scope of this paper,
+(and may also be something which varies between species of agent).
+We can mark the gap with an alternative to (E$_3$) which uses an unspecified notion of `better' as a placeholder:
+%
+\begin{idescription}
+\item[(E$_{3'}$)] No alternative action, $a'$, is a better means to realising outcome $G$.
+\end{idescription}
+%
+This, then, is the standard approach to answering our question about goal attribution: (E$_1$), (E$_2$) and (E$_{3'}$) jointly constitute evidence for (C) given that these approximate conditions under which it would be rational to perform $a$ in order to realise $G$ and given that agents approximate to performing $a$ in order to realise $G$ rather than any other outcome under these conditions.
+
+
+
+
+
 
 
 
