still getting started

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -41,18 +41,37 @@ Recent interest in non-propositional precursors to mindreading makes this approp
 \section{Goal ascription}
 Purposive action is action directed to the realisation of one or more outcomes.
 Goal ascription is the process of identifying which outcomes others' purposive actions are directed to.
+Because goal ascription has received little attention,
+we  first review some of the benefits that being able to identify others' goals brings.
 
-Goal ascription enables one
-to predict and manipulate others' actions, and 
-to learn from their failures and successes.
-%This applies even to goal ascribers with no further mindreading abilities: 
-% even those unable to identify beliefs, desires and other propositional attitudes have much to gain from identifying the outcomes to which other agents' actions are directed.
+It is a familiar idea that goal ascription enables one to learn from others' successes.
+For example,
+if you know or can guess that another agent's actions are directed to opening a nut,
+you may then be in a position to infer that the unfamiliar pattern of actions she is performing constitute a means to open nuts.\footnote{
+***
+\citep{Horner:2005pj}
+}
+Or (in a different case) knowing the goal of another agent's actions may enable you to discover a new use for a tool.\footnote{
+There is currently much 
+}
+A slightly less familiar idea is that goal ascription enables one to learn from others' failures as well as their successes.
 For example, suppose that while you are searching for some peanuts 
 another agent attempts but fails to reach for a closed container.
 In some circumstances,
 if you know that the goal of the agent's action was to obtain the peanuts
-then you now have evidence as to where they might be.
+then you now have evidence as to where they might be.\footnote{
+\citet{hare_chimpanzees_2004} exploit this principle in testing chimpanzees' abilities to ascribe goals.
+}
 This is one illustration of how goal ascription could in principle enable us to learn from others' failures.
+
+
+
+Goal ascription enables one
+to predict and manipulate others' actions.
+***if goal involved manipulating an object, you can predict where agent will go at some point; you can also manipulate the agents' action by revealling the location of the object.  Eg. Liszowski pointing
+%This applies even to goal ascribers with no further mindreading abilities: 
+% even those unable to identify beliefs, desires and other propositional attitudes have much to gain from identifying the outcomes to which other agents' actions are directed.
+
 
 Goal ascription is also instrumental for mindreading:
 knowing which outcomes an action is directed to may constrain hypotheses about what an agent intends 
@@ -64,9 +83,12 @@ and if we also know where all the peanuts are,
 we may be able to infer that she does not know where the peanuts are,
 or that she falsely believes that some of the peanuts are over there.%
 \footnote{
-Of course this can also work the other way:
-belief- and goal-ascriptions are mutually constraining.
+\citet{Wimmer:1998kx} exploit this possibility in testing children's abilities to ascribe false beliefs.
 }
+(Of course this can also work the other way:
+information about an agent's beliefs or other mental states may support conclusions about her goals.
+Belief- and goal-ascriptions are mutually constraining.)
+
 
 Despite the close connection between goal ascription and mindreading,
 goal ascription does not necessarily involve representing representations.
@@ -83,6 +105,123 @@ Some philosophers have argued\footnote{*Bennett} or implied\footnote{*Davidson} 
 On their view, the goal ascription and mindreading are interdependent in this sense: 
 there is no evidence for hypotheses narrowly about goals, only evidence for more complex hypotheses concerning both goals and mental states (such as beliefs).
 So, on this view, those without metarepresentational abilities are not in a position to know the goals of other agents' actions.
+
+
+
+
+\section{The problem of opaque means}
+
+While we lack a detailed theory of the evidential basis of goal ascription,
+it is certain that the evidence for goal ascription sometimes includes considerations about which ends actions are means to.
+Suppose an observer faces an action but cannot identify which end (or ends) it could be a means to.
+This may limit her ability to identify the action's goal (or goals) by depriving her of evidence.
+To illustrate, contrast two cases of tool use.
+In one case, someone uses a reamer to  juice  a lime; in the other, someone else scores shag with a lame to prevent a loaf from cracking.
+Without testimony, 
+an observer familiar with reamers but not lames 
+is less likely to be able to identify the goals of this second action than the first.
+As this illustrates, ignorance about to which ends actions are means can be an obstacle to goal ascription.%
+\footnote{
+This is not to say that no observer could ever identify the goal of any action she fails to recognise as a means to achieving that goal.
+Surely opaque means are not in every case an insurmountable obstacle to goal ascription.
+Our point is that opaque means are sometimes an obstacle to goal ascription because they deprive observers of evidence.
+}
+Call this the problem of opaque means.
+
+Some of the most plausibly unique aspects of human cognition depend on our abilities to recognise the goals of novel behaviours involving tools, and of communicative gestures.
+The problem of opaque means is likely to arise in both cases 
+if goal ascription is based on entirely observation 
+(so that the possibility of interaction is ignored).
+We have just seen an illustration of how the problem of opaque means arises where tools are used to unfamiliar ends.
+Relatedly, it is also likely to arise where actions involve multiple steps that do not form a familiar sequence, can occur in various orders and can be interspersed among other activities;
+as in preparing spirit from grain, for example.
+%\footnote{
+%*cut because 'plausibly unique aspects of human cognition'*
+%one example is food preparation in some groups of mountain gorillas
+%\citep[p.\ 531]{Byrne:2003wx}.
+%*This is slightly tricky because Byrne wants a pure behaviour reading account with no understanding of intention.  
+%Stress that this is consistent with supposing that goals are ascribed.
+%}
+ The problem of opaque means also affects communicative actions 
+ because these are generally  directed to goals which the actions are means to realising only because others recognise them as means to realising those goals (that is, they involve a Gricean circle). 
+To illustrate, consider an experiment by
+***ref whose two main conditions are depicted in figure *fig.
+The pictures in the figure stand for what participants, who were chimpanzees, saw.
+The question was whether participants would be able to work out which of two containers contained a reward.
+In the condition depicted in the left panel, participants saw a chimpanzee trying but failing to reach for the reward. 
+Participants had no problem getting the reward in this case, suggesting that they understood the goal of the failed reach.
+In the condition depicted in the right panel, a human pointed to the reward location.
+Participants did not reliably  get the reward in this case, suggesting that they failed to understand the goal of the pointing action.
+This may be because of the problem of opaque means: 
+participants could identify to what end a failed reach might be a means, but not to what end a communicative gesture might be a means.
+
+***FIGURE***
+
+In what follows we shall suggest that abilities to engage in joint action with others provides a route to knowledge of the goals of other agents' actions  that avoids the problem of opaque means.
+This is one way in which moving away from a purely observational model of interpretation yields a richer evidential base for ascriptions.
+But first we consider a second, related problem.
+
+
+\section{The problem of false belief}
+We have just seen that 
+failure to identify to which ends actions are means can impair goal ascription; this was the problem of opaque means.
+Another problem for purely observational goal ascription arises from the interdependence of beliefs and goals.
+To illustrate, 
+imagine sitting at a table on which two closed opaque boxes each contain an object; one contains an owl, the other a cat.
+If the goal of your action is to retrieve the owl, 
+and you believe that the owl is in the north-most box,
+then 
+(unless things are going very badly) 
+you will reach into the north-most box.
+But of course if you had believed instead that the owl was in the other box,
+then, in acting on the same goal, you would have reached into the other box.
+Now consider someone observing your actions.
+If she is has good reason to believe, falsely, that you know the owl is in the south-most box,
+then she may be justified in supposing, incorrectly, that when you reach into the north-most box the the goal of your action is to retrieve the cat.
+As this illustrates,
+differences in belief between observers and protagonists can be an obstacle to goal ascription.
+Call this the problem of false belief.
+
+There is disagreement over whether it is possible to knowledgably identify the goals of an agent's actions without also ascribing some beliefs to that agent.  
+\citet[pp.48--50]{Bennett:1976rg}
+%\citet[pp.48--50]{Bennett:1976rg} suggests that a theory of goals ascription has to be developed together with a theory of (proto-)belief ascription: `An animal’s behaviour does not show what it registers unless we know what it seeks; but how can we learn what it seeks before we know what it registers?' [p. 48]
+and 
+\citet{Davidson:1974gh}
+both appear to hold that this is impossible,
+that identifying goals cannot be done independently of ascribing beliefs.
+By contrast,
+\citet{Gergely:1995sq},
+*Meltzoff?,
+\citet{Baillargeon:gx}
+and 
+\citet{Woodward:1998dm}
+(among many others)
+appear to assume the opposite, 
+that it is possible to identify goals without even being able to ascribe beliefs.
+For what it is worth, we tentatively favour this latter position.%
+\footnote{
+It is striking that, as far as we can tell, neither Bennett nor Davidson offers an argument for this claim.
+They do note that beliefs and goals make an interdependent contribution to observed action.
+But this by itself does not show that goal ascription cannot in some cases involve justifiably ignoring the possibility of differences in belief between interpreters and their targets.
+For instance,
+suppose that two people are sitting opposite each other at a low table
+ which is 
+sparsely populated with objects.
+The objects are all out in the open; manifestly, both can clearly see them.
+If one reaches to grasp one of these objects (the duck, say), 
+must the other ascribe beliefs in order to knowledgeably identify the goal of her action?
+On the face of it, she need not.  
+Even if she had no ability to ascribe beliefs, she might nevertheless be in a position to acquire knowledge of the goal of the other's action.
+}
+However, this debate is not directly relevant to our concerns here.
+Both sides can agree that 
+differences in belief between observer and protagonist
+are sometimes an obstacle to goal ascription.
+This is all that the problem of false belief requires.
+
+In what follows we shall argue that abilities to engage in joint action provide an interpreter with a route to knowledge of the goals of other agents' actions which does not depend on her abilities to ascribe beliefs.
+This is not because abilities to engage in joint action provide a way to avoid the problem of false beliefs altogether.
+Rather, as we shall see, abilities to engage in joint action provide a way to shift the burden of resolving the problem of false belief from an interpreter to her target.
 
 
 
@@ -130,9 +269,7 @@ The coherence of this conjecture depends on the possibility of knowing something
 He did think relational attitudes (holding true) are the foundation for interpretation.
 But he also thought that interpretation had to happen all at once.)
 
-\citet[pp.48--50]{Bennett:1976rg} suggests that a theory of goals ascription has to be developed together with a theory of (proto-)belief ascription: `An animal’s behaviour does not show what it registers unless we know what it seeks; but how can we learn what it seeks before we know what it registers?' [p. 48]
-
-\citet[p.\ 17]{Dennett:1987sf} 'Here is how it works: first you decide to treat the object whose behavior is to be predicted as a rational agent; then you figure out what beliefs that agent ought to have, given its place in the world and its purpose.   Then you figure out what desires it ought to have, on the same considerations, and finally your predict that this rational agent will act to further its goals in the light of its beliefs.  A little practical reasoning from the chosen set of beliefs and desires will in many—but not in all—instances yield a decision about what the agent ought to do; that is what you predict the agent will do.'
+\citet[p.\ 17]{Dennett:1987sf} `Here is how it works: first you decide to treat the object whose behavior is to be predicted as a rational agent; then you figure out what beliefs that agent ought to have, given its place in the world and its purpose.   Then you figure out what desires it ought to have, on the same considerations, and finally your predict that this rational agent will act to further its goals in the light of its beliefs.  A little practical reasoning from the chosen set of beliefs and desires will in many—but not in all—instances yield a decision about what the agent ought to do; that is what you predict the agent will do.'
 }
 
 So what evidence could support goal ascription by someone who knows nothing discriminating about her targets' mental states or communicative actions?
